--- a/infra/helmchart/values-staging.yaml
+++ b/infra/helmchart/values-staging.yaml
@@ -1,7 +1,8 @@
-# Multi-Application Staging Environment Configuration
+# Multi-Application Staging Environment Values
+# This file configures 3 applications for staging environment with nginx ingress
 
 # ===========================
-# 1. GLOBAL CONFIGURATION
+# GLOBAL CONFIGURATION
 # ===========================
 global:
   environment: "staging"
@@ -9,13 +10,10 @@ global:
   imageTag: "latest"
   namespace: "my-app-staging"
 
+# Namespace configuration for staging
 namespace:
-  name: my-app-staging
-  create: true
-  labels:
-    environment: "staging"
-
-environment: "staging"
+  create: false  # Namespace created by Terraform
+  name: "my-app-staging"
 
 # Shared infrastructure configuration
 imagePullSecrets: []
@@ -28,6 +26,18 @@ serviceAccount:
   annotations: {}
   name: ""
 
+# RBAC configuration
+rbac:
+  create: true
+  rules:
+    - apiGroups: [""]
+      resources: ["pods"]
+      verbs: ["get", "list"]
+    - apiGroups: [""]
+      resources: ["configmaps"]
+      verbs: ["get", "list"]
+
+# Network Policy configuration (moderate restrictions for staging)
 networkPolicy:
   enabled: true
   policyTypes:
@@ -43,6 +53,8 @@ networkPolicy:
           port: 5000
         - protocol: TCP
           port: 80
+        - protocol: TCP
+          port: 3000
   egress:
     - to: []
       ports:
@@ -52,20 +64,34 @@ networkPolicy:
       ports:
         - protocol: TCP
           port: 443
-
-rbac:
-  enabled: true
-  rules:
-    - apiGroups: [""]
-      resources: ["pods"]
-      verbs: ["get", "list"]
-    - apiGroups: [""]
-      resources: ["configmaps"]
-      verbs: ["get", "list"]
+        - protocol: TCP
+          port: 80
 
 # Pod annotations and labels
 podAnnotations: {}
 podLabels: {}
+
+# Health probes (optimized for staging)
+defaultProbes:
+  livenessProbe:
+    httpGet:
+      path: /health
+      port: http
+    initialDelaySeconds: 30
+    periodSeconds: 10
+  readinessProbe:
+    httpGet:
+      path: /health
+      port: http
+    initialDelaySeconds: 5
+    periodSeconds: 5
+  startupProbe:
+    httpGet:
+      path: /health
+      port: http
+    initialDelaySeconds: 15
+    periodSeconds: 10
+    failureThreshold: 30
 
 # Security contexts
 podSecurityContext:
@@ -103,91 +129,80 @@ tolerances: []
 affinity: {}
 
 # ===========================
-# 2. DEFAULT APP CONFIGURATION
+# DEFAULT APP CONFIGURATION
 # ===========================
-# Default configuration applied to all applications
+# Default application template (shared defaults)
 defaultApp:
+  replicaCount: 2
   image:
-    pullPolicy: IfNotPresent
+    pullPolicy: "IfNotPresent"
+    tag: "latest"
   service:
-    type: ClusterIP
+    type: LoadBalancer
     port: 80
+    targetPort: 80
   app:
-    containerPort: 5000
-  security:
-    securityContext:
-      runAsUser: 10001
-      runAsGroup: 10001
-      fsGroup: 10001
-      runAsNonRoot: true
-      fsGroupChangePolicy: "OnRootMismatch"
-      supplementalGroups: []
-    podSecurityContext:
-      allowPrivilegeEscalation: false
-      readOnlyRootFilesystem: true
-      runAsUser: 10001
-      runAsGroup: 10001
-      runAsNonRoot: true
-      capabilities:
-        drop: ["ALL"]
-        add: []
+    containerPort: 80
+    secrets: {}
+    config: {}
+  ingress:
+    enabled: true
+    className: "nginx"
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      nginx.ingress.kubernetes.io/ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/rate-limit: "100"
+      nginx.ingress.kubernetes.io/rate-limit-window: "1m"
+      cert-manager.io/cluster-issuer: letsencrypt-staging
+    host: "staging.mytomorrows.com"
+    path: "/"
+    pathType: "Prefix"
+    tls: true
+  resources:
+    limits:
+      cpu: 500m
+      memory: 512Mi
+    requests:
+      cpu: 200m
+      memory: 256Mi
+  autoscaling:
+    enabled: true
+    minReplicas: 2
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 70
 
 # ===========================
-# 3. INDIVIDUAL APPLICATIONS
+# INDIVIDUAL APPLICATIONS
 # ===========================
-# Applications array - each app can have unique configuration
 applications:
-  - name: my-tomorrows-api
+  # Application 1: Main API Service
+  - name: "my-tomorrows-api"
     enabled: true
+    replicaCount: 2
     image:
-      repository: cloudandparth/my-demo-app
-      tag: "1.1" # Different version for staging
-      pullPolicy: Always
+      repository: "cloudandparth/my-demo-app"
+      tag: "1.1"  # Different version for staging
+      pullPolicy: "Always"
     service:
-      type: LoadBalancer # Use LoadBalancer for staging
+      type: LoadBalancer
       port: 80
       targetPort: 5000
     app:
       containerPort: 5000
-    config:
-      API_BASE_URL: "https://staging-api.example.com"
-      LOG_LEVEL: "INFO" # Less verbose logging in staging
-      MAX_CONNECTIONS: "20"
-      SERVICE_NAME: "api-service"
-    secrets:
-      DB_PASSWORD: "YXBpX2RiX3N0YWdpbmdfcGFzc3dvcmQ=" # base64: api_db_staging_password
-      SECRET_KEY: "YXBpX3N0YWdpbmdfc2VjcmV0X2tleQ==" # base64: api_staging_secret_key
-    resources:
-      requests:
-        cpu: 200m
-        memory: 256Mi
-      limits:
-        cpu: 500m
-        memory: 512Mi
-    healthChecks:
-      livenessProbe:
-        httpGet:
-          path: /config
-          port: 5000
-        initialDelaySeconds: 30
-        periodSeconds: 10
-      readinessProbe:
-        httpGet:
-          path: /health
-          port: 5000
-        initialDelaySeconds: 5
-        periodSeconds: 5
-      startupProbe:
-        httpGet:
-          path: /
-          port: 5000
-        initialDelaySeconds: 10
-        periodSeconds: 10
-        failureThreshold: 30
+      secrets:
+        SECRET_KEY: "YXBpX3N0YWdpbmdfc2VjcmV0X2tleQ=="  # api_staging_secret_key
+        DB_PASSWORD: "YXBpX2RiX3N0YWdpbmdfcGFzc3dvcmQ="  # api_db_staging_password
+      config:
+        API_BASE_URL: "https://staging-api.mytomorrows.com"
+        LOG_LEVEL: "INFO"
+        SERVICE_NAME: "api-service"
+        MAX_CONNECTIONS: "20"
+        ENVIRONMENT: "staging"
+        DEBUG: "false"
     ingress:
       enabled: true
-      host: staging-api.mytomorrows.com
-      path: /api
+      host: "staging-api.mytomorrows.com"
+      path: "/api"
       annotations:
         kubernetes.io/ingress.class: nginx
         nginx.ingress.kubernetes.io/rewrite-target: /
@@ -195,121 +210,101 @@ applications:
         nginx.ingress.kubernetes.io/rate-limit: "100"
         nginx.ingress.kubernetes.io/rate-limit-window: "1m"
         nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
-        nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-RSA-AES128-GCM-SHA256,ECDHE-RSA-AES256-GCM-SHA384"
         cert-manager.io/cluster-issuer: letsencrypt-staging
       tls: true
+    resources:
+      limits:
+        cpu: 500m
+        memory: 512Mi
+      requests:
+        cpu: 200m
+        memory: 256Mi
+    autoscaling:
+      enabled: true
+      minReplicas: 2
+      maxReplicas: 6
+      targetCPUUtilizationPercentage: 70
 
-  - name: my-tomorrows-admin
+  # Application 2: Admin Dashboard
+  - name: "my-tomorrows-admin"
     enabled: true
+    replicaCount: 2
     image:
-      repository: nginx
+      repository: "nginx"
       tag: "alpine"
-      pullPolicy: IfNotPresent
+      pullPolicy: "IfNotPresent"
     service:
       type: LoadBalancer
       port: 80
       targetPort: 80
     app:
       containerPort: 80
-    config:
-      API_ENDPOINT: "http://my-tomorrows-api-service.my-app-staging.svc.cluster.local"
-      ENVIRONMENT: "staging"
-      SERVICE_NAME: "admin-dashboard"
-    secrets:
-      ADMIN_SECRET: "YWRtaW5fc3RhZ2luZ19zZWNyZXQ=" # base64: admin_staging_secret
-    resources:
-      requests:
-        cpu: 100m
-        memory: 128Mi
-      limits:
-        cpu: 200m
-        memory: 256Mi
-    healthChecks:
-      livenessProbe:
-        httpGet:
-          path: /config
-          port: 80
-        initialDelaySeconds: 30
-        periodSeconds: 10
-      readinessProbe:
-        httpGet:
-          path: /health
-          port: 80
-        initialDelaySeconds: 5
-        periodSeconds: 5
-      startupProbe:
-        httpGet:
-          path: /
-          port: 80
-        initialDelaySeconds: 10
-        periodSeconds: 10
-        failureThreshold: 30
+      secrets:
+        ADMIN_SECRET: "YWRtaW5fc3RhZ2luZ19zZWNyZXQ="  # admin_staging_secret
+      config:
+        API_ENDPOINT: "http://my-tomorrows-api-service.my-app-staging.svc.cluster.local"
+        ENVIRONMENT: "staging"
+        SERVICE_NAME: "admin-dashboard"
+        DEBUG: "false"
     ingress:
       enabled: true
-      host: staging-admin.mytomorrows.com
-      path: /
+      host: "staging-admin.mytomorrows.com"
+      path: "/"
       annotations:
         kubernetes.io/ingress.class: nginx
         nginx.ingress.kubernetes.io/rewrite-target: /
         nginx.ingress.kubernetes.io/ssl-redirect: "true"
         nginx.ingress.kubernetes.io/rate-limit: "100"
         nginx.ingress.kubernetes.io/rate-limit-window: "1m"
-        nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
-        nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-RSA-AES128-GCM-SHA256,ECDHE-RSA-AES256-GCM-SHA384"
         cert-manager.io/cluster-issuer: letsencrypt-staging
       tls: true
+    resources:
+      limits:
+        cpu: 200m
+        memory: 256Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
     autoscaling:
       enabled: true
       minReplicas: 2
       maxReplicas: 5
       targetCPUUtilizationPercentage: 70
-      targetMemoryUtilizationPercentage: 80
 
-  - name: my-tomorrows-worker
-    enabled: true # Third application - worker service
+  # Application 3: Background Worker
+  - name: "my-tomorrows-worker"
+    enabled: true
+    replicaCount: 2
     image:
-      repository: cloudandparth/my-demo-worker
+      repository: "cloudandparth/my-demo-worker"
       tag: "1.0"
-      pullPolicy: Always
+      pullPolicy: "Always"
     service:
-      type: ClusterIP # Internal service only
+      type: ClusterIP  # Internal service only
       port: 3000
       targetPort: 3000
     app:
       containerPort: 3000
-    config:
-      QUEUE_URL: "redis://redis.my-app-staging.svc.cluster.local:6379"
-      WORKER_THREADS: "4"
-      LOG_LEVEL: "INFO"
-      SERVICE_NAME: "background-worker"
-    secrets:
-      WORKER_SECRET: "d29ya2VyX3NlY3JldF9zdGFnaW5n" # base64: worker_secret_staging
+      secrets:
+        WORKER_SECRET: "d29ya2VyX3NlY3JldF9zdGFnaW5n"  # worker_secret_staging
+      config:
+        QUEUE_URL: "redis://redis.my-app-staging.svc.cluster.local:6379"
+        WORKER_THREADS: "4"
+        LOG_LEVEL: "INFO"
+        SERVICE_NAME: "background-worker"
+        ENVIRONMENT: "staging"
+        DEBUG: "false"
+    ingress:
+      enabled: false  # Worker doesn't need external access
     resources:
-      requests:
-        cpu: 150m
-        memory: 192Mi
       limits:
         cpu: 300m
         memory: 384Mi
-    healthChecks:
-      livenessProbe:
-        httpGet:
-          path: /health
-          port: 3000
-        initialDelaySeconds: 30
-        periodSeconds: 10
-      readinessProbe:
-        httpGet:
-          path: /ready
-          port: 3000
-        initialDelaySeconds: 5
-        periodSeconds: 5
-      startupProbe:
-        httpGet:
-          path: /startup
-          port: 3000
-        initialDelaySeconds: 15
-        periodSeconds: 10
-        failureThreshold: 30
-    ingress:
-      enabled: false # Worker doesn't need external access
+      requests:
+        cpu: 150m
+        memory: 192Mi
+    autoscaling:
+      enabled: true
+      minReplicas: 2
+      maxReplicas: 4
+      targetCPUUtilizationPercentage: 75
